Make AdvancementMain#getAdvancement thread-safe